# OmniLang-C-Template

./: .gitignore  CMakeLists.txt  README.md
bindings/node/: carbon_node.cpp  carbon_node.h
bindings/php/: build.sh  carbon_php.c  carbon_php.h
bindings/python/: build.sh  carbon.pyx  carbon_python.h  setup.py
bindings/ruby/: build.sh  carbon_ruby.c  carbon_ruby.h  extconf.rb
examples/node/: index.js
examples/php/: index.php
examples/python/: example.py
examples/ruby/: example.rb
include/: carbon.h
src/: carbon.c
